--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/styles.css" />
     <title>WDD330</title>
   </head>
   <body>
     <h1>WDD330 Web Development II Portfolio, Marc Williamson</h1>
-    <h2>Notes</h2>
-    <h2>Exercises</h2>
-    <h2>Challenges</h2>
+    <h2>Block 1</h2>
+    <ol id="weeklyList"></ol>
   </body>
+  <script src="js/main.js"></script>
 </html>
