--- a/w01/w01.html
+++ b/w01/w01.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../week.css">
+    <link rel="stylesheet" href="../styles/week.css">
     <title>Week 1 Notes</title>
   </head>
   <body>
