--- a/ninja/ninja.html
+++ b/ninja/ninja.html
@@ -1,9 +1,8 @@
 <head>
 <meta charset='utf-8'>
-<title>I Can Click A Rainbow</title>
+<title>Ninja practice</title>
 </head>
 <body>
-<button id='button'>click me</button>
 <script src='ninja.js'></script>
 </body>
 </html>
