--- a/team1/team1w02/index.html
+++ b/team1/team1w02/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Week02 Team</title>
   </head>
   <body>
@@ -23,6 +24,9 @@
     <input id="part3Input1" type="number" placeholder="type first integer" />
     <input id="part3Input2" type="number" placeholder="type second integer" />
     <button id="part3Button" type="button" onclick="addNumbers()">+</button>
+    <button id="part3Button2" type="button" onclick="multiplyNumbers()">
+      x
+    </button>
     <div id="part3Result"></div>
   </body>
   <script src="main.js"></script>
