--- a/ninja/index.html
+++ b/ninja/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="A JavaScript Quiz Game" />
+    <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="A JavaScript Quiz
+Game"
+    />
     <title>Quiz Ninja</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -12,8 +14,12 @@
     <section class="dojo">
       <div class="quiz-body">
         <header>
+          <div id="score">Score: <strong>0</strong></div>
           <h1>Quiz Ninja!</h1>
         </header>
+        <div id="question"></div>
+        <div id="result"></div>
+        <div id="info"></div>
       </div>
     </section>
     <script src="main.js"></script>
