--- a/ninja/ninja.html
+++ b/ninja/ninja.html
@@ -1,8 +1,18 @@
-<head>
-<meta charset='utf-8'>
-<title>Ninja practice</title>
-</head>
-<body>
-<script src='ninja.js'></script>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Justice League</title>
+  </head>
+  <body>
+    <header>
+      <h1 id="title">Justice League</h1>
+    </header>
+    <ul id="roster">
+      <li class="hero">Superman</li>
+      <li class="vigilante hero" id="bats">Batman</li>
+      <li class="hero">Wonder Woman</li>
+    </ul>
+  </body>
+  <script src="ninja.js"></script>
 </html>
