--- a/todo/index.html
+++ b/todo/index.html
@@ -13,8 +13,7 @@
     <div id="taskContainer" class="max-width">
   
         <ul id="taskList" class="max-width" >
-         <li><label ><input type="checkbox" class="checkbox" >Your tasks will appear here. Add a task below.</label><button type="button">X</button></li>
-         <li><label ><input type="checkbox" >Your tasks will appear here. Add a task below. hfhfhh hdhdhhd hhfhfhu hfhh</label><button type="button">X</button></li>
+
         </ul>
 
       <div id="filter" class="max-width">
@@ -26,14 +25,11 @@
         </ul>
       </div>
     </div>
-  </body>
-  <footer>
     <h2>Create a new task here</h2>
     <div id="newTaskContainer" class="max-width">
-      <input type="text" id="newTaskInput" placeholder="Enter your new task here"/>
+      <input type="text" id="newTaskInput" placeholder="Enter your new task"/>
       <button type="button" id="addNewTask">+</button>
     </div>
-  </footer>
-  </div>
-  <script src="index.js" type="module"></script>
+    </body>
+      <script src="index.js" type="module"></script>
 </html>
