--- a/todo/index.html
+++ b/todo/index.html
@@ -19,7 +19,7 @@
       <div id="filter" class="max-width">
         <ul>
           <li id="numTasksLeft">X Tasks Left</li>
-          <li id="all">All</li>
+          <li id="all" class="active">All</li>
           <li id="active">Active</li>
           <li id="completed">Completed</li>
         </ul>
