--- a/todo/index.html
+++ b/todo/index.html
@@ -20,8 +20,8 @@
         <ul>
           <li id="numTasksLeft">X Tasks Left</li>
           <li id="all" class="active">All</li>
-          <li id="active">Active</li>
-          <li id="completed">Completed</li>
+          <li id="active">broken completed</li>
+          <li id="completed">Active</li>
         </ul>
       </div>
     </div>
