--- a/team1/team1w08/starwarsapi.html
+++ b/team1/team1w08/starwarsapi.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Working with a remote API</h1>
-    <div id="outputDiv"></div>
+    <div id="parentDiv"></div>
     <script src="main.js"></script>
   </body>
 </html>
