--- a/team1/team1w08/starwarsapi.html
+++ b/team1/team1w08/starwarsapi.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Working with a remote API</h1>
-    <div id="parentDiv"></div>
+    <main>
+      <h1>Remote API</h1>
+      <div id="parentDiv"></div>
+    </main>
     <script src="main.js"></script>
   </body>
 </html>
