--- a/team1/team1w08/starwarsapi.html
+++ b/team1/team1w08/starwarsapi.html
@@ -5,12 +5,22 @@
     <meta http-equiv="X-UA-Compatible" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Team1 w08 api fetch activity</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <main>
       <h1>Remote API</h1>
       <div id="parentDiv"></div>
+      <div id="buttons">
+        <a href="#" id="previous">&laquo;Previous</a>
+        <a href="#" id="next">Next&raquo;</a>
+      </div>
     </main>
     <script src="main.js"></script>
   </body>
