--- a/team1/team1w08/starwarsapi.html
+++ b/team1/team1w08/starwarsapi.html
@@ -21,6 +21,24 @@
         <a href="#" id="previous">&laquo;Previous</a>
         <a href="#" id="next">Next&raquo;</a>
       </div>
+      <div id="detailsContainer" class="hidden">
+        <dl>
+          <dt>Name:</dt>
+          <dd class="name"></dd>
+          <dt>Gender:</dt>
+          <dd class="gender"></dd>
+          <dt>Height:</dt>
+          <dd class="height"></dd>
+          <dt>Mass:</dt>
+          <dd class="mass"></dd>
+          <dt>Hair Color:</dt>
+          <dd class="hair_color"></dd>
+          <dt>Eye Color:</dt>
+          <dd class="eye_color"></dd>
+          <dt>Skin Color:</dt>
+          <dd class="skin_color"></dd>
+        </dl>
+      </div>
     </main>
     <script src="main.js"></script>
   </body>
