--- a/jwfarm/jwfarm.html
+++ b/jwfarm/jwfarm.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <h1>JW Farm Organic Vegetables</h1>
-    <div id="weatherDiv"></div>
+    <div id="weatherDiv">
+      Current Weather @ JW Farm
+      <p>Temp: <span>jstemp</span></p>
+    </div>
     <script src="main.js" type="module"></script>
   </body>
 </html>
