--- a/jwfarm/jwfarm.html
+++ b/jwfarm/jwfarm.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>JW Farm</title>
   </head>
   <body>
     <h1>JW Farm Organic Vegetables</h1>
     <div id="weatherDiv">
       Current Weather @ JW Farm
-      <p>Temp: <span>jstemp</span></p>
+      <p id="p1">Temp: <span>test</span></p>
+      <p id="p2">Wind Chill: <span></span></p>
+      <p id="p3">Wind: <span></span></p>
+      <p id="p4">Precipitation: <span></span></p>
     </div>
     <script src="main.js" type="module"></script>
   </body>
