--- a/jwfarm/jwfarm.html
+++ b/jwfarm/jwfarm.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>JW Farm</title>
   </head>
   <body>
@@ -16,6 +16,6 @@
       <p id="p3">Wind: <span></span></p>
       <p id="p4">Precipitation: <span></span></p>
     </div>
-    <script src="main.js" type="module"></script>
+    <script src="jwfarm.js" type="module"></script>
   </body>
 </html>
