--- a/jwfarm/jwfarm.html
+++ b/jwfarm/jwfarm.html
@@ -9,13 +9,16 @@
   </head>
   <body>
     <h1>JW Farm Organic Vegetables</h1>
+    <h2>Current Weather @ JW Farm</h2>
     <div id="weatherDiv">
-      Current Weather @ JW Farm
-      <p id="p1">Temp: <span>test</span></p>
-      <p id="p2">Wind Chill: <span></span></p>
-      <p id="p3">Wind: <span></span></p>
-      <p id="p4">Precipitation: <span></span></p>
+      <p id="p1">Temp: <span>No data</span></p>
+      <p id="p2">Wind Chill: <span>No data</span></p>
+      <p id="p3">Wind: <span>No data</span></p>
+      <p id="p4">Precipitation: <span>No data</span></p>
     </div>
+    <h2>Important Farm Dates</h2>
+    <ul id="eventsUl"></ul>
+
     <script src="jwfarm.js" type="module"></script>
   </body>
 </html>
