--- a/jwfarm/jwfarm.html
+++ b/jwfarm/jwfarm.html
@@ -18,6 +18,7 @@
     </div>
     <h2>Important Farm Dates</h2>
     <ul id="eventsUl"></ul>
+    <h2>Work Log</h2>
 
     <script src="jwfarm.js" type="module"></script>
   </body>
