--- a/jwfarm/jwfarm.html
+++ b/jwfarm/jwfarm.html
@@ -27,7 +27,7 @@
     <h2>Worklogs</h2>
     <div id="worklogsConainer">
       <ul id="worklogsList">
-        <li>test</li>
+        <li>Add a new worklog entry below</li>
       </ul>
       <form id="worklogsForm" action="">
         <label for="newWorklogDate">
