--- a/jwfarm/jwfarm.html
+++ b/jwfarm/jwfarm.html
@@ -25,7 +25,7 @@
     <h2>Important Farm Dates - 90 day outlook</h2>
     <ul id="eventsUl"></ul>
     <h2>Worklogs</h2>
-    <div id="worklogsConainer">
+    <div id="worklogsContainer">
       <ul id="worklogsList">
         <li>Add a new worklog entry below</li>
       </ul>
