--- a/jwfarm/jwfarm.html
+++ b/jwfarm/jwfarm.html
@@ -22,9 +22,13 @@
       <p id="p3">Wind: <span>No data</span></p>
       <p id="p4">Precipitation: <span>No data</span></p>
     </div>
-    <h2>Important Farm Dates - 90 day outlook</h2>
+    <h2>
+      Important Farm Dates - 90 day outlook<button id="hideOutlook">
+        Hide
+      </button>
+    </h2>
     <ul id="eventsUl"></ul>
-    <h2>Worklogs</h2>
+    <h2>Worklogs<button id="hideLogs">Hide</button></h2>
     <div id="worklogsContainer">
       <ul id="worklogsList">
         <li>Add a new worklog entry below</li>
