--- a/jwfarm/jwfarm.html
+++ b/jwfarm/jwfarm.html
@@ -24,11 +24,25 @@
     </div>
     <h2>
       Important Farm Dates - 90 day outlook<button id="hideOutlook">
-        Hide
+        <img
+          src="./images/icons8-chevron-up-48.png"
+          alt="upward chevron"
+        /></button
+      ><button id="showOutlook">
+        <img src="./images/icons8-chevron-down-48.png" alt="downward chevron" />
       </button>
     </h2>
     <ul id="eventsUl"></ul>
-    <h2>Worklogs<button id="hideLogs">Hide</button></h2>
+    <h2>
+      Worklogs<button id="hideLogs">
+        <img
+          src="./images/icons8-chevron-up-48.png"
+          alt="upward chevron"
+        /></button
+      ><button id="showLogs">
+        <img src="./images/icons8-chevron-down-48.png" alt="downward chevron" />
+      </button>
+    </h2>
     <div id="worklogsContainer">
       <ul id="worklogsList">
         <li>Add a new worklog entry below</li>
