--- a/jwfarm/jwfarm.html
+++ b/jwfarm/jwfarm.html
@@ -23,27 +23,30 @@
       <p id="p4">Precipitation: <span>No data</span></p>
     </div>
     <h2>
-      Important Farm Dates - 90 day outlook<button id="hideOutlook">
+      Important Farm Dates - 90 day outlook<button
+        id="hideOutlook"
+        class="active"
+      >
         <img
           src="./images/icons8-chevron-up-48.png"
           alt="upward chevron"
         /></button
-      ><button id="showOutlook">
+      ><button id="showOutlook" class="hidden">
         <img src="./images/icons8-chevron-down-48.png" alt="downward chevron" />
       </button>
     </h2>
-    <ul id="eventsUl"></ul>
+    <ul id="eventsUl" class="active"></ul>
     <h2>
-      Worklogs<button id="hideLogs">
+      Worklogs<button id="hideLogs" class="active">
         <img
           src="./images/icons8-chevron-up-48.png"
           alt="upward chevron"
         /></button
-      ><button id="showLogs">
+      ><button id="showLogs" class="hidden">
         <img src="./images/icons8-chevron-down-48.png" alt="downward chevron" />
       </button>
     </h2>
-    <div id="worklogsContainer">
+    <div id="worklogsContainer" class="active">
       <ul id="worklogsList">
         <li>Add a new worklog entry below</li>
       </ul>
