--- a/jwfarm/jwfarm.html
+++ b/jwfarm/jwfarm.html
@@ -18,7 +18,7 @@
     <h2>Current Weather @ JW Farm</h2>
     <div id="weatherDiv">
       <p id="p1">Temp: <span>No data</span></p>
-      <p id="p2">Wind Chill: <span>No data</span></p>
+      <p id="p2">Feels Like: <span>No data</span></p>
       <p id="p3">Wind: <span>No data</span></p>
       <p id="p4">Precipitation: <span>No data</span></p>
     </div>
