120722c moved delete button to left side

--- a/jwfarm/jwfarm.html
+++ b/jwfarm/jwfarm.html
@@ -30,7 +30,7 @@
   <body>
     <h1>JW Farm</h1>
     <h2>Organic Vegetables, Hartselle, AL</h2>
-    <h3>Current Weather @ JW Farm</h3>
+    <h3>Current Weather</h3>
     <div id="weatherDiv">
       <p id="p1">Temp: <span>No data</span></p>
       <p id="p2">Feels Like: <span>No data</span></p>
