120922 validate updatedDate done

--- a/jwfarm/jwfarm.html
+++ b/jwfarm/jwfarm.html
@@ -50,6 +50,8 @@
       <ul id="worklogsList">
         <li>Add a new worklog entry below</li>
       </ul>
+      <span id="dateError" class="error" aria-live="polite"></span>
+      <span id="contentError" class="error" aria-live="polite"></span>
       <form id="worklogsForm" method="get" action="">
         <label for="newWorklogDate"
           >Enter as mm/dd/yyyy hh:mm AM or PM (required)
